Menu Resturaunt Completed

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html"> Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+    
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+
+    <img 
+        id= "banner"
+        src="assets/images/banner.png"
+        alt="Resturant Banner">
+
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -19,9 +48,16 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-        <p>
-            <strong>Phone Number:</strong> TBD
-        </p>
+
+
+
+        <i class="fa fa-map-marker" aria-hidden="true">176-40 Union Turnpike, Fresh Meadows, NY 1136:</i> &nbsp <i class="fa fa-phone" aria-hidden="true"> (718) 362-9986</i><br><br>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>136 West Street, New York, NY 10007:</i>&nbsp<i class="fa fa-phone" aria-hidden="true"> (212) 766-8234</i><br><br>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>386 Braodway, New York, NY 10013:</i>&nbsp <i class="fa fa-phone" aria-hidden="true">(212) 635-8331</i><br><br>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>1196 Flatbush Ave, Brooklyn, NY 11226:</i>&nbsp <i class="fa fa-phone" aria-hidden="true">(718) 935-8500</i><br><br>
+        <i class="fa fa-envelope" aria-hidden="true">hthaiml@google.com</i>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        
     </main>
 </body>
 </html>
